task_3/deployment-emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-cache
  name: web-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-cache
  template:
    metadata:
      labels:
        app: web-cache
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /cache
          name: cache-volume
      volumes:
      - name: cache-volume
        emptyDir: {}
