task_3/minio-publish.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  selector:
    app: minio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9001
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: minio-svc
             port: 
                number: 80
